css/support-style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&family=League+Spartan:wght@100;400&family=Roboto:wght@100&display=swap');



body {
    margin: 0;
    padding: 0;
    background-color:#F2F2F2;
}

.navbar {
    border-radius: 0;
    background-color:#F2F2F2;
    z-index: 1000;
    position: fixed; 
    width: 100%; 
}


.navbar-brand {
    padding: 25px;
}

.navbar-brand img {
    height: 40px;
}

.navbar-toggle {
    margin: 25px 15px 25px 0;
}

.navbar-center {
    padding-top: 20px;
}


.navbar-center a {
    color: black !important;
    font-size: 15px;
    font-family: Karla;
}

.navbar-center a:hover {
    transition: .5s;
    color: #ff6d3c !important;
}
     
.navbar-right {
    padding: 20px;
}

.navbar-right a {
    padding: 20px;
}

.navbar-right i {
    font-size: 15px;
    color: black;
}

.navbar-right i:hover {
    transition: .5s;
    color:#ff6d3c;
}

.first-content {
    position: relative;
    margin-top: 10%;
}

.first-content img {
    display: block;
    width: 100%;
    max-width: 100%;
}

.content {
    width: max-content;
    position: absolute;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.content h1, p, form {
    display: flex;
    justify-content: center;
    align-items: center;
}

.content h1 {
    font-family: Karla;
    font-size:48px;
    margin-bottom: 20px;
}

.content p {
    font-family: League Spartan;
    font-size:32px;
    margin-bottom: 7%;
}

.content h1, p {
    color: #ffffff;
}

.form-control {
    font-family: League Spartan;
}

#search-icon {
    padding: 10px;
    margin-right: 5%;
    font-size: 25px;
}


.second-container {
    padding: 80px;
    margin: auto;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.second-content img {
    height: 333px;
    width: 456px;
}

.second-content p {
    color: black;
    font-size: 20px;
    font-family: League Spartan;
    display: flex;
    justify-content: start;
    max-width: 400px;
}

.second-content {
    padding: 0;
    margin: auto;
}

.second-content a:hover {
    text-decoration: none;
}

.second-content p:hover {
    color: #ff6d3c;
}

.third-container {
    padding: 20px;
    margin-top: 5%;
}

.third-content-container {
    display: flex;
    justify-content: center;
    align-items: center;
}


.row {
    display: flex;
    flex-wrap: wrap;
}

.third-container h2 {
    font-family: Karla;
    font-size: 40px;
    color: #00024b;
    display: flex;
    justify-content: center;
    align-items: center;
}

.third-container p {
    color: #000000;
    font-family: League Spartan;
    font-size: 24px;
}

.third-content span {
    color: #000000;
    font-family: League Spartan;
    font-size: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.third-content img {
    width: 200px;
    height: 200px;
    margin-bottom: 30px;
}


.third-content {
    padding: 80px;
    margin: auto;
}


.fourth-container {
    margin: 5% 0;
    padding: 20px;
}


.fourth-container h3 {
    font-family: Karla;
    font-size: 42px;
    color:#00024b;
    display: flex;
    justify-content: center;
    align-items: center;
}


.fourth-container p{
    font-family: League Spartan;
    font-size: 24px;
    font-weight: bold;
    color: black;
}

.fourth-content-container {
    margin-top: 7%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.fourth-content {
    padding: 20px 100px;
    margin: auto;
}



.fourth-content p, span {
    font-family: League Spartan;
    font-size: 24px;
}

.fourth-content p {
    font-weight: lighter;
}





@media(max-width: 1200px) {
    .content h1 {
        font-size: 42px;
    }

    .content p {
        font-size: 22px;
    }

    #search-icon {
        margin-right: 30px;
    }

    .second-content img {
        height: 180px;
        width: 300px;   
    }

    .second-content {
        margin-bottom: 5%;
    }

    .second-content p {
        max-width: 300px;
    }


    
}


@media(max-width: 992px) {
    .content h1 {
        font-size: 38px;
    }

    .content p {
        font-size: 20px;
    }
    .third-container h2 {
        font-size: 35px;
    }

}


@media(max-width: 768px) {
    .content h1 {
        font-size: 29px;
    }
    .content p {
        font-size: 16px;
    }

    .form-control {
        font-size: small;
    }

    .content {
        padding: 20px;
    }

    #search-icon {
        margin-right: 20px;
        font-size: 20px;
    }

    .second-container {
        padding: 10% 5%;
    }

    .third-container h2 {
        font-size: 30px;
    }

    .third-container p {
        font-size: 20px;
    }
}


@media(max-width: 600px) {
    .content h1 {
        margin-bottom: 5%;
        font-size: 20px;
    }
    .content p {
        margin-bottom: 5%;
        font-size: 14px;
    }

    .first-content {
        margin-top: 20%;
    }
}



@media(max-width: 460px) {
    .content h1 {
        margin-bottom: 3%;
        font-size: 14px;
    }
    .content p {
        margin-bottom: 3%;
        font-size: 12px;
    }

    .form-group input {
        height: 30px;
        padding: 10px;
    }

    #search-icon {
        font-size: 15px;
        padding: 0;
    }

    .second-content img {
        height: 150px;
        width: 250px;   
    }

    .second-content p {
        max-width: 250px;
        font-size: 15px;
    }

    .second-container {
        padding: 8% 4%;
    }

    .third-container h2 {
        font-size: 25px;
    }

    .third-container p {
        font-size: 14px;
    }

    .third-content span {
        font-size: 20px;
    }
}

